# TestDjangoProject

./: pyproject.toml
