[tool.poetry]
name = "finalproject"
version = "0.1.0"
description = "Final Project"
authors = ["Ihar Shauchuk <shauchuk.ihar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
flake8 = "^4.0.1"
djangorestframework = "^3.13.1"
python-decouple = "^3.6"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
